Fix some failing tests